--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "animate.css": "^4.1.1",
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-router": "latest"
